src/objects/Root_Cause__c.object
<CustomObject>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brief Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Unit</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Root Causes</relationshipLabel>
        <relationshipName>Root_Causes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Defect_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Defect Type</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Issue Category</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Issue ID</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Issue_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause Issue Category</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Impact_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Impact Date</label>
        <type>Date</type>
    </fields>
    <label>Root Cause</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Issue_Category__c</columns>
        <columns>Defect_Type__c</columns>
        <columns>Root_Cause_Issue_Category__c</columns>
        <columns>Root_Cause__c</columns>
        <columns>Brief_Description__c</columns>
        <columns>Service_Impact_Date__c</columns>
        <columns>Issue_ID__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BEO_Root_Cause</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Case__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Defect_Type__c</columns>
        <columns>Issue_Category__c</columns>
        <columns>Issue_ID__c</columns>
        <columns>Root_Cause__c</columns>
        <columns>Root_Cause_Issue_Category__c</columns>
        <columns>Service_Impact_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>BEO Root Cause</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{00000000}</displayFormat>
        <label>Root Cause Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Root Causes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>